tests/baselines/reference/parserErrorRecoveryIfStatement2.errors.txt
==== tests/cases/compiler/parserErrorRecoveryIfStatement2.ts (2 errors) ====
    class Foo {
      f1() {
        if (a
            ~
!!! parserErrorRecoveryIfStatement2.ts(3,9): error TS2095: Cannot find name 'a'.
      }
      ~
!!! parserErrorRecoveryIfStatement2.ts(4,3): error TS1005: ')' expected.
      f2() {
      }
      f3() {
      }
    }